PDFBOX-4658: try other memory settings
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/2.0@1868114 13f79535-47bb-0310-9956-ffa450edef68